objects/PHSS_Custom_Metadata__mdt.object
<CustomObject>
    <fields>
        <fullName>Bucket_Account_Name_Prefix__c</fullName>
        <label>Bucket Account Name Prefix</label>
        <length>192</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertificationProvisioningTriggerDebug__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If TRUE then records in PHSS_Certification_Provisioning__c will NOT be deleted after processing</description>
        <inlineHelpText>If TRUE then records in PHSS_Certification_Provisioning__c will NOT be deleted after processing</inlineHelpText>
        <label>Certification Provisioning Trigger Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certification_Error_Message__c</fullName>
        <label>Certification Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Email_Encoding_Key__c</fullName>
        <description>Default - ISO-8859-1</description>
        <label>Default Email Encoding Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Language_Key__c</fullName>
        <description>Default - en_US</description>
        <label>Default Language Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Locale_Key__c</fullName>
        <description>Default - en_US</description>
        <label>Default Locale Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Timezone_Key__c</fullName>
        <description>Default - America/New_York</description>
        <label>Default Timezone Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marked_As_Resource_Group_Name__c</fullName>
        <label>Marked_As_Resource_Group_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Contacts_Per_Account__c</fullName>
        <label>Maximum Contacts Per Account</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prevent_Certification_Provisioning_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Certification Provisioning Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_User_Provisioning_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent User Provisioning Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserProvisioningTriggerDebug__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If TRUE then records in PHSS_User_Provisioning__c will NOT be deleted after processing</description>
        <inlineHelpText>If TRUE then records in PHSS_User_Provisioning__c will NOT be deleted after processing</inlineHelpText>
        <label>User Provisioning Trigger Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Error_Message__c</fullName>
        <label>User Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username_Suffix__c</fullName>
        <label>Username_Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>PHSS Custom Metadata</label>
    <pluralLabel>PHSS Custom Metadata</pluralLabel>
</CustomObject>